--- a/code/src/components/fillInForm/style.css
+++ b/code/src/components/fillInForm/style.css
@@ -1,4 +1,4 @@
-.ToDoList {
+.fillInForm {
   width: 55%;
   margin: auto;
   display: flex;
@@ -6,23 +6,23 @@
   align-items: center;
 }
 
-.ToDoList .inputholder {
+.fillInForm .inputholder {
   width: 100%;
   display: flex;
   flex-direction: row;
 }
 
-.ToDoList form {
+.fillInForm form {
   width: 100%;
 }
 
-.ToDoList input {
+.fillInForm input {
   width: 100%;
   height: 25px;
   padding: 10px;
 }
 
-.ToDoList button {
+.fillInForm button {
 background-color: #43aeb9;
 border: none;
 border-radius: 5px;
