--- a/code/src/components/todoItems/style.css
+++ b/code/src/components/todoItems/style.css
@@ -1,14 +1,12 @@
 .theList {
   list-style: none;
-  width: 100%;
+  width: 55%;
+  margin: auto;
+  margin-top: 15px;
   padding-left: 0;
-}
-
-li {
   color: #333;
   background-color: pink;
   padding: 15px;
   margin-bottom: 15px;
   border-radius: 5px;
-  width: 95%;
 }
