--- a/code/src/components/fillInForm/style.css
+++ b/code/src/components/fillInForm/style.css
@@ -1,5 +1,5 @@
 .fillInForm {
-  width: 63%;
+  width: 40%;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -20,10 +20,11 @@
   width: 100%;
   height: 25px;
   padding: 10px;
+  font-size: 15px;
 }
 
 .fillInForm button {
-background-color: #43aeb9;
+background-color: #1ca021;
 border: none;
 border-radius: 5px;
 color: white;
@@ -37,4 +38,16 @@ margin-left: 10px;
 
 button:hover {
   cursor: pointer
+}
+
+@media (min-width: 0px) and (max-width: 400px) {
+  .fillInForm {
+    width: 90%;
+  }
+}
+
+@media (min-width: 401px) and (max-width: 800px) {
+  .fillInForm {
+    width: 70%;
+  }
 }
