--- a/code/src/components/fillInForm/style.css
+++ b/code/src/components/fillInForm/style.css
@@ -20,24 +20,22 @@
   width: 100%;
   height: 25px;
   padding: 10px;
-  font-size: 15px;
+  font-size: 16px;
 }
 
 .fillInForm button {
 background-color: #1ca021;
-border: none;
-border-radius: 5px;
+border-radius: 10px;
 color: white;
-padding: 15px 32px;
+padding: 10px 20px;
 text-align: center;
-text-decoration: none;
-display: inline-block;
 font-size: 16px;
 margin-left: 10px;
 }
 
 button:hover {
-  cursor: pointer
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 @media (min-width: 0px) and (max-width: 400px) {
