--- a/code/src/components/todoItems/style.css
+++ b/code/src/components/todoItems/style.css
@@ -21,38 +21,72 @@
 #completed {
   background-color: #80808075;
   font-style: italic;
-  text-decoration: line-through;
 }
 
 .wrapper input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
   margin-right: 10px;
 }
 
+.wrapper input:checked ~ .checkmark {
+    background-color: #0000002e;
+}
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.wrapper input:checked ~ .checkmark:after {
+    display: block;
+}
+
+.wrapper .checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 20px;
+    width: 20px;
+    background-color: #eee;
+}
+
+.wrapper .checkmark:after {
+    left: 7px;
+    top: 2px;
+    width: 4px;
+    height: 10px;
+    border: solid #52a125;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.wrapper .container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .wrapper button {
-  width: 30px;
-  height: 30px;
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 50%;
-  color: white;
-  padding: 5px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  margin-left: 10px;
-  display: flex;
-  justify-content: center;
+  width: 20px;
+  height: 20px;
+  background: url("trash.png") no-repeat center;
+  background-size: contain;
+  border: none;
 }
 
 .wrapper button:hover {
   cursor: pointer;
   opacity: 0.5;
-}
-
-.wrapper .sign {
-  width: 80%;
-  height: 3px;
-  background-color: red;
 }
 
 @media (min-width: 0px) and (max-width: 400px) {
